crates/autoresolve/tests/compile_fail/scoped_parent_not_module_qualified.stderr
error: expected identifier
  --> tests/compile_fail/scoped_parent_not_module_qualified.rs:12:15
   |
12 | #[base(scoped(123), helper_module_exported_as = crate::request_base_helper)]
   |               ^^^

warning: type `AppBase_Part0_Scheduler` should have an upper camel case name
 --> tests/compile_fail/scoped_parent_not_module_qualified.rs:8:20
  |
8 |     pub scheduler: Scheduler,
  |                    ^^^^^^^^^ help: convert the identifier to upper camel case: `AppBasePart0Scheduler`
  |
  = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default
